--- a/html/bingyan.html
+++ b/html/bingyan.html
@@ -47,8 +47,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -83,8 +84,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -119,8 +121,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -171,8 +174,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -211,8 +215,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -247,8 +252,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -284,8 +290,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -320,8 +327,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -357,8 +365,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -393,8 +402,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -433,8 +443,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -469,8 +480,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -505,8 +517,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -545,8 +558,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -581,8 +595,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -617,8 +632,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -653,8 +669,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -689,8 +706,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -725,8 +743,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -765,8 +784,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -801,8 +821,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -841,8 +862,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -888,8 +910,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -933,8 +956,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -986,8 +1010,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -1024,8 +1049,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -1061,8 +1087,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -1098,9 +1125,10 @@
           <h4 id="Sūn_Xuēgāng">孫薛剛</h4>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <p class="pronouns">代名詞：zhe/zher/zhier</p>
+            <!-- グレイシアン（Glacian） -->
+            <a href="https://www.deviantart.com/pride-flags/art/Glacian-876950170" title="グレイシアン" target="_blank">
+              <img class="pride-flag" src="../img/pride/xeno/Glacian.png" alt="グレイシアン" title="グレイシアン（Glacian）">
             </a>
             <br>
           </div>
@@ -1118,9 +1146,9 @@
             能力：
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
+            性別：♀<br>
+            性自認：ゼノジェンダー・グレイシアン<br>
+            代名詞：<ruby>奴<rt>ジー</rt></ruby>／<ruby>奴<rt>ジェル</rt></ruby>／<ruby>奴<rt>ジェル</rt></ruby>（zhe/zher/zhier）<br>
             雌雄性：
           </p>
           <p>
@@ -1146,8 +1174,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -1184,8 +1213,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
