--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -82,8 +82,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -121,8 +122,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -156,8 +158,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -192,8 +195,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -227,8 +231,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -266,8 +271,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -301,8 +307,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -337,8 +344,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -376,8 +384,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -411,8 +420,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -450,8 +460,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -485,8 +496,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -526,8 +538,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -561,8 +574,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -596,8 +610,9 @@
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
               <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag" src="../img/pride/" alt="" title="">
+                <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
               </a>
               <br>
             </div>
@@ -716,8 +731,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -752,8 +768,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -787,8 +804,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -823,8 +841,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -858,8 +877,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -894,8 +914,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -929,8 +950,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -965,8 +987,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
