--- a/html/nizi.html
+++ b/html/nizi.html
@@ -47,16 +47,19 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/her</p>
+            <!-- トランスジェンダー（Transgender） -->
             <a href="https://lgbtqia.fandom.com/wiki/Transgender" title="トランスジェンダー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Transgender.png" alt="トランスジェンダー（Transgender）" title="トランスジェンダー（Transgender）">
+              <img class="pride-flag" src="../img/pride/Transgender.png" alt="トランスジェンダー" title="トランスジェンダー（Transgender）">
             </a>
             <br>
-            <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Gray-asexual" title="グレイアセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/GrayAsexual.png" alt="グレイアセクシャル（Gray Asexual）" title="グレイアセクシャル（Gray Asexual）">
+            <!-- グレイアセクシャル（Gray Asexual） -->
+            <a href="https://lgbtqia.fandom.com/wiki/Gray-asexual" title="グレイアセクシャル" target="_blank">
+              <img class="pride-flag" src="../img/pride/GrayAsexual.png" alt="グレイアセクシャル" title="グレイアセクシャル（Gray Asexual）">
             </a>
             <br>
+            <!-- アロマンティック（Aromantic） -->
             <a href="https://lgbtqia.fandom.com/wiki/Aromantic" title="アロマンティック" target="_blank">
-              <img class="pride-flag" src="../img/pride/Aromantic.png" alt="アロマンティック（Aromantic）" title="アロマンティック（Aromantic）">
+              <img class="pride-flag" src="../img/pride/Aromantic.png" alt="アロマンティック" title="アロマンティック（Aromantic）">
             </a>
             <br>
           </div>
@@ -103,16 +106,19 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
+            <!-- インターセックス（Intersex） -->
             <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
-              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
+              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス" title="インターセックス（Intersex）">
             </a>
             <br>
+            <!-- ノンバイナリー（Non-binary） -->
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" title="ノンバイナリー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー" title="ノンバイナリー（Non-binary）">
             </a>
             <br>
+            <!-- エイスフラックス（Aceflux） -->
             <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Aceflux" title="エイスフラックス" target="_blank">
-              <img class="pride-flag" src="../img/pride/Aceflux.png" alt="エイスフラックス（Aceflux）" title="エイスフラックス（Aceflux）">
+              <img class="pride-flag" src="../img/pride/Aceflux.png" alt="エイスフラックス" title="エイスフラックス（Aceflux）">
             </a>
             <br>
           </div>
@@ -157,12 +163,14 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
+            <!-- ノンバイナリー（Non-binary） -->
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" title="ノンバイナリー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー" title="ノンバイナリー（Non-binary）">
             </a>
             <br>
+            <!-- アセクシャル（Asexual） -->
             <a href="https://lgbtqia.fandom.com/wiki/Asexual" title="アセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/Asexual.png" alt="アセクシャル（Asexual）" title="アセクシャル（Asexual）">
+              <img class="pride-flag" src="../img/pride/Asexual.png" alt="アセクシャル" title="アセクシャル（Asexual）">
             </a>
             <br>
           </div>
@@ -208,16 +216,19 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
+            <!-- トランスフェミニン（Transfeminine） -->
             <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" title="トランスフェミニン" target="_blank">
-              <img class="pride-flag" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfeminine）" title="トランスフェミニン（Transfeminine）">
+              <img class="pride-flag" src="../img/pride/Transfeminine.png" alt="トランスフェミニン" title="トランスフェミニン（Transfeminine）">
             </a>
             <br>
+            <!-- ノンバイナリー（Non-binary） -->
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" title="ノンバイナリー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー" title="ノンバイナリー（Non-binary）">
             </a>
             <br>
+            <!-- アセクシャル（Asexual） -->
             <a href="https://lgbtqia.fandom.com/wiki/Asexual" title="アセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/Asexual.png" alt="アセクシャル（Asexual）" title="アセクシャル（Asexual）">
+              <img class="pride-flag" src="../img/pride/Asexual.png" alt="アセクシャル" title="アセクシャル（Asexual）">
             </a>
             <br>
           </div>
@@ -262,8 +273,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/her</p>
+            <!-- オムニセクシャル（Omnisexual） -->
             <a href="https://lgbtqia.fandom.com/wiki/Omnisexual" title="オムニセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/Omnisexual.png" alt="オムニセクシャル（Omnisexual）" title="オムニセクシャル（Omnisexual）">
+              <img class="pride-flag" src="../img/pride/Omnisexual.png" alt="オムニセクシャル" title="オムニセクシャル（Omnisexual）">
             </a>
             <br>
           </div>
@@ -300,8 +312,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：they/it</p>
+            <!-- ノンバイナリー（Non-binary） -->
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" title="ノンバイナリー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー" title="ノンバイナリー（Non-binary）">
             </a>
             <br>
           </div>
@@ -335,8 +348,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：they/them</p>
+            <!-- ノンバイナリー（Non-binary） -->
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" title="ノンバイナリー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー" title="ノンバイナリー（Non-binary）">
             </a>
             <br>
           </div>
@@ -369,24 +383,29 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/any</p>
+            <!-- インターセックス（Intersex） -->
             <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
-              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
+              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス" title="インターセックス（Intersex）">
             </a>
             <br>
-            <a href="https://lgbtqia.fandom.com/wiki/Aromantic_asexual" title="アロ＝エイス" target="_blank">
-              <img class="pride-flag" src="../img/pride/Aroace.png" alt="アロ＝エイス（Aroace）" title="アロ＝エイス（Aroace）">
-            </a>
-            <br>
-            <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Apothisexual" title="性行為を虫唾が走った" target="_blank">
-              <img class="pride-flag" src="../img/pride/SexRepulsed.png" alt="性行為を虫唾が走った（Sex-Repulsed）" title="性行為を虫唾が走った（Sex-Repulsed）">
-            </a>
-            <br>
+            <!-- ジェンダーフリュイド（Genderfluid） -->
             <a href="https://lgbtqia.fandom.com/wiki/Genderfluid" title="ジェンダーフリュイド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Genderfluid.png" alt="ジェンダーフリュイド（Genderfluid）" title="ジェンダーフリュイド（Genderfluid）">
+              <img class="pride-flag" src="../img/pride/Genderfluid.png" alt="ジェンダーフリュイド" title="ジェンダーフリュイド（Genderfluid）">
             </a>
             <br>
+            <!-- ジェンダーフラックス（Genderflux） -->
             <a href="https://lgbtqia.fandom.com/wiki/Genderflux" title="ジェンダーフラックス" target="_blank">
-              <img class="pride-flag" src="../img/pride/Genderflux.png" alt="ジェンダーフラックス（Genderflux）" title="ジェンダーフラックス（Genderflux）">
+              <img class="pride-flag" src="../img/pride/Genderflux.png" alt="ジェンダーフラックス" title="ジェンダーフラックス（Genderflux）">
+            </a>
+            <br>
+            <!-- アロ＝エイス（Aroace） -->
+            <a href="https://lgbtqia.fandom.com/wiki/Aromantic_asexual" title="アロ＝エイス" target="_blank">
+              <img class="pride-flag" src="../img/pride/Aroace.png" alt="アロ＝エイス" title="アロ＝エイス（Aroace）">
+            </a>
+            <br>
+            <!-- アポティセクシャル（Apothisexual） -->
+            <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Apothisexual" title="アポティセクシャル" target="_blank">
+              <img class="pride-flag" src="../img/pride/SexRepulsed.png" alt="アポティセクシャル" title="アポティセクシャル（Apothisexual）">
             </a>
             <br>
           </div>
@@ -468,12 +487,14 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they</p>
+            <!-- インターセックス（Intersex） -->
             <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
-              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
+              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス" title="インターセックス（Intersex）">
             </a>
             <br>
+            <!-- アジェンダー（Agender） -->
             <a href="https://lgbtqia.fandom.com/wiki/Agender" title="アジェンダー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Agender.png" alt="アジェンダー（Agender）" title="アジェンダー（Agender）">
+              <img class="pride-flag" src="../img/pride/Agender.png" alt="アジェンダー" title="アジェンダー（Agender）">
             </a>
             <br>
           </div>
@@ -511,8 +532,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -553,12 +575,14 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/they/hu</p>
+            <!-- デミ女（Demigirl） -->
             <a href="https://lgbtqia.fandom.com/wiki/Demigender#Demigirl" title="デミ女" target="_blank">
-              <img class="pride-flag" src="../img/pride/Demigirl.png" alt="デミ女（Demigirl）" title="デミ女（Demigirl）">
+              <img class="pride-flag" src="../img/pride/Demigirl.png" alt="デミ女" title="デミ女（Demigirl）">
             </a>
             <br>
+            <!-- アブロセクシャル（Abrosexual） -->
             <a href="https://lgbtqia.fandom.com/wiki/Abrosexual" title="アブロセクシャル" target="_blank">
-              <img class="pride-flag" src="../img/pride/Abrosexual.png" alt="アブロセクシャル（Abrosexual）" title="アブロセクシャル（Abrosexual）">
+              <img class="pride-flag" src="../img/pride/Abrosexual.png" alt="アブロセクシャル" title="アブロセクシャル（Abrosexual）">
             </a>
             <br>
           </div>
@@ -596,8 +620,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <!-- アブロセクシャル（Abrosexual） -->
+            <a href="https://lgbtqia.fandom.com/wiki/Abrosexual" title="アブロセクシャル" target="_blank">
+              <img class="pride-flag" src="../img/pride/Abrosexual.png" alt="アブロセクシャル" title="アブロセクシャル（Abrosexual）">
             </a>
             <br>
           </div>
@@ -636,8 +661,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <!-- アブロセクシャル（Abrosexual） -->
+            <a href="https://lgbtqia.fandom.com/wiki/Abrosexual" title="アブロセクシャル" target="_blank">
+              <img class="pride-flag" src="../img/pride/Abrosexual.png" alt="アブロセクシャル" title="アブロセクシャル（Abrosexual）">
             </a>
             <br>
           </div>
@@ -676,8 +702,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：she/he</p>
-            <a href="https://lgbtqia.fandom.com/wiki/Bigender" title="バイジェンダー" target="_blank">
-              <img class="pride-flag" src="../img/pride/Bigender.png" alt="バイジェンダー（Bigender）" title="バイジェンダー（Bigender）">
+            <!-- バイジェンダー（Bigender） -->
+            <a href="https://lgbtqia.fandom.com/wiki/Bigender" title="" target="_blank">
+              <img class="pride-flag" src="../img/pride/Bigender.png" alt="バイジェンダー" title="バイジェンダー（Bigender）">
             </a>
             <br>
           </div>
@@ -715,8 +742,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -754,8 +782,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -793,8 +822,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
