--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -45,8 +45,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -83,8 +84,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -123,8 +125,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -159,8 +162,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -195,8 +199,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -231,8 +236,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -267,8 +273,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -303,8 +310,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -339,8 +347,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -375,8 +384,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -411,8 +421,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -447,8 +458,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -486,8 +498,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -522,8 +535,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -558,8 +572,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -594,8 +609,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -630,8 +646,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -666,8 +683,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -702,8 +720,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -738,8 +757,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -774,8 +794,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -810,8 +831,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
