--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -45,8 +45,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -82,8 +83,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -119,8 +121,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
@@ -156,8 +159,9 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
+            <!-- Pride template / Pride flag placeholder :3 -->
             <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/" alt="" title="">
+              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
             </a>
             <br>
           </div>
