--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -44,8 +44,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -96,8 +97,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -140,8 +142,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -179,8 +182,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -216,8 +220,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -253,8 +258,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -290,8 +296,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -389,8 +396,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -425,8 +433,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -462,8 +471,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
@@ -497,8 +507,9 @@
         <div class="pride">
           <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
           <p class="pronouns">代名詞：</p>
+          <!-- Pride template / Pride flag placeholder :3 -->
           <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-            <img class="pride-flag" src="../img/pride/" alt="" title="">
+            <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
           </a>
           <br>
         </div>
