--- a/html/gallery/nizi/SatokiNijikawa.html
+++ b/html/gallery/nizi/SatokiNijikawa.html
@@ -44,7 +44,7 @@
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
           <div class="art-ref" id="郷鬼のレファレンス">
-            <img class="reference-art" src="../../../img/ref/SatokiNijikawa.png" alt="郷鬼のレファレンス">
+            <img class="reference-art" src="../../../img/ref/Satoki_Nijikawa.png" alt="郷鬼のレファレンス">
           </div>
         </div>
       </section>
